--- a/css/main.css
+++ b/css/main.css
@@ -1571,24 +1571,21 @@ body {
   }
 }
 
-@keyframes wiggle {
-  0% {
-    transform: rotate(0deg);
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  25% {
-    transform: rotate(-5deg);
-  }
-  50% {
-    transform: rotate(5deg);
-  }
-  75% {
-    transform: rotate(-5deg);
-  }
-  100% {
-    transform: rotate(0deg);
+  to {
+    opacity: 1;
   }
 }
 
-.wiggle {
-  animation: wiggle 0.5s ease-in-out infinite;
+.delayed-fade-in {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+}
+
+/* Adjust the delay time as needed */
+.delay-5s {
+  animation-delay: 3s;
 }
